# Mongo_Interface

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  requirement.txt
app/auth/: dependenies.py  router.py
app/crud/: router.py
core/: config.py  dependencies.py
database/: asyncDB.py  db.py  importdata.py  netflix_userbase.csv
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/api/: Crud.js  Login.js  SignIn.js
frontend/src/components/: Crud.js  Delete.js  GetData.js  Login.js  PostData.js  ProtectedRoute.js  PutData.js  Router.js  SignIn.js
frontend/src/utils/: useAuthenticatedDataFetch.js  useAxiosMethos.js
user/: router.py
