[tool.poetry]
name = "mongo-interface"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
PyJWT = "^2.8.0"
pydantic = "^2.6.1"
pymongo = "^4.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
